--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
@@ -3,6 +3,11 @@
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+
+    if (Model?.GeneralPersonAttendanceDetailsList != null)
+    {
+        Model.GeneralPersonAttendanceDetailsList = Model.GeneralPersonAttendanceDetailsList.OrderByDescending(x => x.AttendanceDate).ToList();
+    }
 }
 <div class="row">
     @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
@@ -18,11 +23,23 @@
                     foreach (var item in Model?.GeneralPersonAttendanceDetailsList)
                     {
                         <tr>
-                            <td>@item.AttendanceDate.ToShortDateString()</td>
-                            <td>@item.LoginTime</td>
-                            <td>@item.LogoutTime</td>
-                            <td>@item.Duration</td>
-                            <td>@item.Remark</td>
+                            <td>@item.AttendanceDate.ToString("dd/MM/yyyy")</td>
+                            <td>
+                                @(item.LoginTime.HasValue ? DateTime.MinValue.Add(item.LoginTime.Value).ToString("hh:mm tt") : "N/A")
+                            </td>
+                            <td>
+                                @(item.LogoutTime.HasValue ? DateTime.MinValue.Add(item.LogoutTime.Value).ToString("hh:mm tt") : "N/A")
+                            </td>
+                            <td>
+                                @(item.LoginTime.HasValue && item.LogoutTime.HasValue
+                                    ? (item.LogoutTime.Value - item.LoginTime.Value).ToString("hh\\:mm")
+                                    : (item.LogoutTime.HasValue
+                                    ? "N/A"
+                                    : (item.LoginTime.HasValue
+                                    ? "N/A"
+                                    : "00:00")))
+                            </td>
+                            <td style="max-width: 200px; overflow: hidden; text-overflow: ellipsis;" title="@item.Remark">@item.Remark</td>
                             <td class="text-center">
                                 <a data-bs-toggle="modal" data-bs-target="#AddUpdateAttendanceModelPopupId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberAttendance('AddUpdateAttendanceModelPopupContentId','@Model.GymMemberDetailId','@Model.PersonId')" title="Update Attendance" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas fa-edit"></i></a>
                                 @* <a href="../@controllerName/DeleteGymMemberAttendance?gymMemberAttendanceIdIds=@item.&gymMemberDetailId=@Model.GymMemberDetailId&personId=@Model.PersonId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
@@ -35,4 +52,3 @@
     </div>
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
-
