--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -4,10 +4,8 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentAndBuildingByCentreCode()" };
-    // DropdownViewModel buildingDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingByCentreCode()" };
-    // DropdownViewModel buildingRoomDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingRoomsByCentreCode()" };
-    // DropdownViewModel employeeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetEmployeeMasterByCentreCode()" };
-    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode };
+    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentByCentreCode()" };
+
 
 }
 <!-- Page Content-->
@@ -94,7 +92,8 @@
                                        DropdownName = "EmployeeId",
                                        DropdownSelectedValue = Model.EmployeeId
                                         .ToString(),
-                                       Parameter = Model.SelectedCentreCode
+                                       Parameter = $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}"
+
                                    })
                                                 @Html.ValidationMessageFor(x => x.EmployeeId)
                                             }
@@ -116,11 +115,11 @@
                                         <div class="mb-3">
                                             @Html.LabelFor(x => x.WeekDayEnumIds, new { @class = "form-label required" })
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                        {
-                                        DropdownSelectedValue = Convert.ToString(Model.WeekDayEnumIds),
-                                        DropdownName = "WeekDayEnumIds",
-                                        GroupCode = DropdownTypeEnum.WeekDays.ToString()
-                                        })
+                                   {
+                                       DropdownSelectedValue = Convert.ToString(Model.WeekDayEnumIds),
+                                       DropdownName = "WeekDayEnumIds",
+                                       GroupCode = DropdownTypeEnum.WeekDays.ToString()
+                                   })
                                             @Html.ValidationMessageFor(x => x.WeekDayEnumIds)
                                         </div>
                                     </div>
