--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -92,7 +92,7 @@
                                        DropdownName = "EmployeeId",
                                        DropdownSelectedValue = Model.EmployeeId
                                         .ToString(),
-                                       Parameter = $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}"
+                                       Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode)? $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}" : ""
 
                                    })
                                                 @Html.ValidationMessageFor(x => x.EmployeeId)
