--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -4,9 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentAndBuildingByCentreCode()" };
-    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentAndEmployeeListByCentreCode()" };
-
-
+    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetEmployeeListByCentreCodeAndDepartmentId()" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -55,7 +53,8 @@
                                    DropdownType = DropdownTypeEnum.CentrewiseBuilding.ToString(),
                                    DropdownName = "OrganisationCentrewiseBuildingMasterId",
                                    DropdownSelectedValue = Model.OrganisationCentrewiseBuildingMasterId.ToString(),
-                                   Parameter = Model.SelectedCentreCode
+                                   Parameter = Model.SelectedCentreCode,
+                                   ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseRoomByBuildingId()"
                                })
                                         @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingMasterId)
                                     </div>
