--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = Model.GymMembershipPlanId > 0 ? "Update Gym Membership Plan" : "Create Gym Membership Plan";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel centreDropdown = new DropdownViewModel()
+            {
+                DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(),
+                DropdownName = "SelectedCentreCode",
+                DropdownSelectedValue = Model.SelectedCentreCode,
+                ChangeEvent = "",
+                IsDisabled = Model.GymMembershipPlanId > 0
+            };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -29,6 +37,18 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GymMembershipPlanId)
+                            @if (Model.GymMembershipPlanId == 0)
+                            {
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
+                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                            @Html.ValidationMessageFor(x => x.SelectedCentreCode)
+                                        </div>
+                                    </div>
+                                </div>
+                            }
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
