--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -80,14 +80,28 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MaxCost, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MaxCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        @if (Model.GymMembershipPlanId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.MaxCost, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.MaxCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.MaxCost)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MinCost, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MinCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        @if (Model.GymMembershipPlanId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.MinCost, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.MinCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.MinCost)
                                     </div>
                                 </div>
@@ -110,24 +124,49 @@
                                 <div class="col-lg-4" id="PlanDurationInMonthDivId">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDurationInMonth, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PlanDurationInMonth, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        @if (Model.GymMembershipPlanId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.PlanDurationInMonth, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.PlanDurationInMonth, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.PlanDurationInMonth)
                                     </div>
                                 </div>
+
                                 <div class="col-lg-4" id="PlanDurationInDaysDivId">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDurationInDays, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PlanDurationInDays, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        @if (Model.GymMembershipPlanId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.PlanDurationInDays, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.PlanDurationInDays, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.PlanDurationInDays)
                                     </div>
                                 </div>
-                                <div class="col-lg-4" style="display:none" id="PlanDurationInSessionDivId">
+                                <div class="col-lg-4" id="PlanDurationInSessionDivId" style="display: @(Model.GymMembershipPlanId > 0 ? "none" : "block")">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDurationInSession, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PlanDurationInSession, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        @if (Model.GymMembershipPlanId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.PlanDurationInSession, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.PlanDurationInSession, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.PlanDurationInSession)
                                     </div>
                                 </div>
+
+
+
                                 @* <div class="col-lg-4">
                             <div class="mb-3">
                             @Html.LabelFor(x => x.IsRenewable, new { @class = "form-label" })
@@ -185,3 +224,8 @@
     </div>
 </div>
 <script src="~/js/coditech/gym/gymmembershipplan.js"></script>
+<script>
+    $(document).ready(function () {
+        GymMembershipPlan.Initialize();
+    });
+</script>
