--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/GymMemberMembershipPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/GymMemberMembershipPlan.cshtml
@@ -17,7 +17,7 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">Membership Plan List- @Model.FirstName @Model.LastName</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateGymMemberMembershipPlan" role="button"><i class="fas fa-plus me-2"></i>Add Membership Plan</a>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/AssociateGymMemberMembershipPlan?gymMemberDetailId=@Model.GymMemberDetailId&personId=@Model.PersonId" role="button"><i class="fas fa-plus me-2"></i>Add/Upgrade Membership Plan</a>
                         <p class="text-muted mb-0"></p>
                     </div>
                     <div class="card-body">
@@ -75,7 +75,6 @@
                                                 }
 
                                             </div>
-
                                         </div>
                                     </div>
                                 </div>
