--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/GymMemberMembershipPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/GymMemberMembershipPlan.cshtml
@@ -48,13 +48,13 @@
                                                     <div class="col-lg-3">
                                                         <div class="mb-3 row">
                                                             <label class="form-label" style="font-weight:bold !important">Start Date</label>
-                                                            <label class="form-label">@item.PlanStartDate</label>
+                                                            <label class="form-label">@Convert.ToDateTime(@item.PlanStartDate).ToShortDateString()</label>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <div class="mb-3 row">
                                                             <label class="form-label" style="font-weight:bold !important">Expiration Date</label>
-                                                            <label class="form-label">@item.PlanDurationExpirationDate</label>
+                                                            <label class="form-label">@Convert.ToDateTime(@item.PlanDurationExpirationDate).ToShortDateString()</label>
                                                         </div>
                                                     </div>
                                                 }
