--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -112,14 +112,9 @@
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.WeekDayEnumIds, new { @class = "form-label required" })
-                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                   {
-                                       DropdownSelectedValue = Convert.ToString(Model.WeekDayEnumIds),
-                                       DropdownName = "WeekDayEnumIds",
-                                       GroupCode = DropdownTypeEnum.WeekDays.ToString()
-                                   })
-                                            @Html.ValidationMessageFor(x => x.WeekDayEnumIds)
+                                            @Html.LabelFor(x => x.SelectedWeekDayEnumIds, new { @class = "form-label required" })
+                                            @Html.ListBoxFor(m => m.SelectedWeekDayEnumIds, new SelectList(Model.AllWeekDays, "GeneralEnumaratorId", "EnumDisplayText"), new { @class = "selectpicker form-control " })
+                                            @Html.ValidationMessageFor(x => x.SelectedWeekDayEnumIds)
                                         </div>
                                     </div>
                                 </div>
