--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCityMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCityMaster/CreateEdit.cshtml
@@ -17,11 +17,11 @@
                         <div class="col">
                             @if (Model.GeneralCityMasterId > 0)
                             {
-                                <h4 class="page-title">Update City</h4>
+                                <h4 class="card-title">Update City</h4>
                             }
                             else
                             {
-                                <h4 class="page-title">Create City</h4>
+                                <h4 class="card-title">Create City</h4>
                             }
                         </div><!--end col-->
                     </div><!--end row-->
