--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
@@ -35,12 +35,6 @@
                                         @Html.TextBoxFor(x => x.DepartmentName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.DepartmentName)
                                     </div>
-                                    <div class="mb-3">
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.WorkActivity, new { @class = "form-check-input" })
-                                            @Html.LabelFor(x => x.WorkActivity, new { @class = "form-check-label" })
-                                        </div>
-                                    </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
@@ -54,6 +48,14 @@
                                         @Html.LabelFor(x => x.PrintShortDesc, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PrintShortDesc, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PrintShortDesc)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                <div class="mb-3">
+                                        @Html.LabelFor(x => x.WorkActivity, new { @class = "form-check-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.WorkActivity, new { @class = "form-check-input" })                                      
+                                    </div>
                                     </div>
                                 </div>
                             </div>
