--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/CreateEdit.cshtml
@@ -5,31 +5,25 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
-<div class="page-content">
+<div class="page-content mt-5">
     <div class="container-fluid">
-        <!-- Page-Title -->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-title-box">
-                    <div class="row">
-                        <div class="col">
-                            @if (Model.GeneralNationalityMasterId > 0)
-                            {
-                                <h4 class="page-title">Update Nationality</h4>
-                            }
-                            else
-                            {
-                                <h4 class="page-title">Create Nationality</h4>
-                            }
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div><!--end page-title-box-->
-            </div><!--end col-->
-        </div><!--end row-->
-        <!-- end page title end breadcrumb -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                        <div class="col">
+                            @if (Model.GeneralNationalityMasterId > 0)
+                            {
+                                <h4 class="card-title">Update Nationality</h4>
+                            }
+                            else
+                            {
+                                <h4 class="card-title">Create Nationality</h4>
+                            }
+                        </div><!--end col-->
+                    </div><!--end row-->
+                </div>
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
