--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/CreateEdit.cshtml
@@ -16,18 +16,15 @@
                         <div class="col">
                             @if (Model.GeneralRegionMasterId > 0)
                             {
-                                <h4 class="page-title">Update Region</h4>
+                                <h4 class="card-title">Update Region</h4>
                             }
                             else
                             {
-                                <h4 class="page-title">Create Region</h4>
+                                <h4 class="card-title">Create Region</h4>
                             }
                         </div><!--end col-->
                     </div><!--end row-->
                 </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card">
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
