--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTaxGroupMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTaxGroupMaster/CreateEdit.cshtml
@@ -11,24 +11,19 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="row align-items-center">
-               
-                    <div class="row">
+                        <div class="row align-items-center">               
                         <div class="col">
                             @if (Model.GeneralTaxGroupMasterId > 0)
                             {
-                                <h4 class="page-title"> Update Tax Group Master</h4>
+                                <h4 class="card-title"> Update Tax Group Master</h4>
                             }
                             else
                             {
-                                <h4 class="page-title">Create Tax Group Master</h4>
+                                <h4 class="card-title">Create Tax Group Master</h4>
                             }
                         </div><!--end col-->
                     </div><!--end row-->
-                </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card">
+                </div>       
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
