--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_GeneralEnumList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_GeneralEnumList.cshtml
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 table-responsive">
                             <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
                                 <thead>
                                     <tr role="row">
