--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
@@ -14,7 +14,7 @@
     @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
 </div>
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 table-responsive">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
