--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -92,7 +92,7 @@
                             </div>
                             <div class="card-body bg-light-alt text-center auth-footer">
                                 <span class="text-muted d-none d-sm-inline-block">
-                                    Copyright © Coditech Software Pvt. Ltd @System.DateTime.Now.Year
+                                    Copyright © @System.DateTime.Now.Year <a href="http://coditechsoftware.com/" target="_blank">Coditech Software Pvt. Ltd</a>
                                 </span>
                             </div>
                         </div>
