--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Edit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Edit.cshtml
@@ -5,7 +5,7 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
-<div class="page-content">
+<div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
