Implementation of Admin Role access

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -20,9 +20,6 @@
     <!-- App favicon -->
     <link rel="shortcut icon" href="~/favicon.ico">
 
-    <!-- jvectormap -->
-    @*<link href="~/css/layout/jquery-jvectormap-2.0.2.css" rel="stylesheet">*@
-
     <!-- App css -->
     <link href="~/css/layout/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/layout/icons.min.css" rel="stylesheet" type="text/css"/>
@@ -33,6 +30,7 @@
     <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
     <link href="~/css/layout/bootstrap-select.min.css" rel="stylesheet" />
     <link href="~/css/layout/site.css" rel="stylesheet" />
+    <link href="~/css/layout/jstree.css" rel="stylesheet" />
 </head>
 
 <body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="">
