--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_MenuList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_MenuList.cshtml
@@ -6,7 +6,7 @@
 }
 @if (Model?.Count > 0)
 {
-    @foreach (UserMenuModel itemParent in Model.Where(x => x.ParentMenuID == 0).OrderBy(y => y.MenuDisplaySeqNo))
+    @foreach (UserMenuModel itemParent in Model.Where(x => x.ParentMenuId == 0).OrderBy(y => y.MenuDisplaySeqNo))
     {
         <li class="has-submenu last-elements">
             <a href="#">
@@ -16,7 +16,7 @@
                 </span>
             </a>
             <ul class="submenu">
-                @foreach (UserMenuModel itemMenu in Model.Where(x => x.ParentMenuID == itemParent.UserMainMenuMasterId).OrderBy(y => y.MenuDisplaySeqNo))
+                @foreach (UserMenuModel itemMenu in Model.Where(x => x.ParentMenuId == itemParent.UserMainMenuMasterId).OrderBy(y => y.MenuDisplaySeqNo))
                 {
                     <li><a href="/@itemMenu.MenuLink"><i class="ti ti-minus"></i>@itemMenu.MenuName</a></li>
                 }
