--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymBodyMeasurementType/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymBodyMeasurementType/_List.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12 table-responsive">
-        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+        <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
                 @if (Model?.GymBodyMeasurementTypeList?.Count > 0)
@@ -24,7 +24,7 @@
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
-                            <td class="text-center">
+                            <td class="text-center data-action">
                                 <a href="../@controllerName/Edit?gymBodyMeasurementTypeId=@item.GymBodyMeasurementTypeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?gymBodyMeasurementTypeIds=@item.GymBodyMeasurementTypeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
