--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberFollowUpList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberFollowUpList.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12 table-responsive">
-        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+        <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
                 @if (Model?.GymMemberFollowUpList?.Count > 0)
@@ -24,7 +24,7 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsSetReminder)
                             </td>
                             <td>@item.ReminderDate</td>
-                            <td class="text-center">
+                            <td class="text-center data-action">
                                 <a data-bs-toggle="modal" data-bs-target="#AddUpdateFollowUpModelPopupId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberFollowUp('AddUpdateFollowUpModelPopupContentId','@Model.GymMemberDetailId','@item.GymMemberFollowUpId','@Model.PersonId')" title="Update Follow-Up" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas fa-edit"></i></a>
                                 <a href="../@controllerName/DeleteGymMemberFollowUp?gymMemberFollowUpIdIds=@item.GymMemberFollowUpId&gymMemberDetailId=@Model.GymMemberDetailId&personId=@Model.PersonId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
