--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
@@ -14,7 +14,7 @@
 
 <div class="row">
     <div class="col-sm-12 table-responsive">
-        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+        <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
                 @if (Model?.GymMemberDetailsList?.Count > 0)
@@ -30,7 +30,7 @@
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
-                            <td class="text-center">
+                            <td class="text-center data-action">
                                 <a href="../@controllerName/UpdateMemberPersonalDetails?gymMemberDetailId=@item.GymMemberDetailId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a data-bs-toggle="modal" data-bs-target="#@addFollowUpModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberFollowUp('@addFollowUpModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Add Follow-Up" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas ti-user"></i></a><span class="m-2">|</span>
                                 <a data-bs-toggle="modal" data-bs-target="#@manualAttendanceModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.CreatEditGeneralPersonAttendanceDetails('@manualAttendanceModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Manual Attendance" class="btn btn-sm btn-soft-info btn-circle"><i class="fas ti-check"></i></a><span class="m-2">|</span>
