--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12 table-responsive">
-        <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+        <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
                 @if (Model?.GymMembershipPlanList?.Count > 0)
@@ -27,7 +27,7 @@
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
-                            <td class="text-center">
+                            <td class="text-center data-action">
                                 <a href="../@controllerName/UpdateGymMembershipPlan?gymMembershipPlanId=@item.GymMembershipPlanId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <!-- Delete Button Triggering Modal -->
                                 <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GymMembershipPlanId"><i class="fas fa-trash-alt"></i></a>
